# bevy_declarative_ui

./: Cargo.toml  base.xsd  bevy_ui.xsd
bevy_declarative_ui/: Cargo.toml
bevy_declarative_ui/src/: lib.rs  resources.rs  xml_parser.rs
bevy_declarative_ui_parser/: Cargo.toml
bevy_declarative_ui_parser/src/: attribute.rs  layout_errors_impls.rs  utils.rs
bevy_declarative_ui_parser/tests/: correct.rs  duplicate_param.rs  incorrect_tag_position.rs  missing_layout.rs
bevy_ui_xml/: Cargo.toml
bevy_ui_xml/assets/: correct.xml  global_res.xml  injection_count_1.xml  injection_count_10.xml
bevy_ui_xml/src/: commands.rs  functions.rs  injector.rs  lib.rs  loader.rs  parser.rs  raw_handle.rs  templates.rs  types.rs  xml_component.rs  xml_parser.rs
bevy_ui_xml_generator/: Cargo.toml
bevy_ui_xml_parser/: Cargo.toml
crates/ui_generator/: Cargo.toml
crates/ui_generator/src/: functions.rs  lib.rs  module.rs  utils.rs
crates/ui_generator/src/codegen/: file.rs  mod.rs  module.rs  static_field.rs  structs.rs  using.rs
crates/ui_generator/src/static/: ids.rs  mod.rs  required.rs  spawn_function.rs  template_function.rs
crates/ui_generator/src/static/binding/: component.rs  mod.rs  resource.rs
crates/ui_generator/src/static/type_analyzer/: mod.rs
dynamic_ui/: Cargo.toml
example/: Cargo.toml
ui_generator/: Cargo.toml
ui_generator/src/: functions.rs  utils.rs
ui_generator/src/codegen/: file.rs  module.rs  structs.rs  using.rs
ui_generator/src/static/: ids.rs  required.rs
ui_generator/src/static/binding/: component.rs  resource.rs
(+124 files in other folders)
